--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -31,9 +31,9 @@ p.f-txt { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; 
 /*.txt-left { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; width: 50%; }*/
 
 /* test */
-image.fl-l { float: left }
-image.fl-r { float: right }
-p.break { clear: both }
+.diagram image.fl-l { float: left }
+.diagram image.fl-r { float: right }
+.diagram, .break { clear: both }
 
 
 
