--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,16 +24,15 @@ figure {display: block; margin:0;  }
 figcaption.f-perc5l { display: inline-block; margin-left:2em; width: 50%;}
 figcaption.f-perc7l { display: inline-block; margin-left:2em; width: 70%;}
 figcaption.f-perc5r { display: inline-block; margin-right:2em; width: 50%;}
-image.f-pict { display: inline-block; margin:0; width: 30%; }
+img, image.f-pict { display: inline-block; margin:0; width: 30%; }
 p.f-txt { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; width: 50%;}
 
 /*.fig-left { display: inline-block; margin-right:0; margin-top:0; margin-left:0; width: 30%; }*/
 /*.txt-left { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; width: 50%; }*/
 
-/* test */
-.diagram img.fl-l { float: left; }
-.diagram img.fl-r { float: right; }
+/* floating pictures */
+.diagram image, img.fl-l { float: left; }
+.diagram p.fl-l { margin-left:2em; color: green; }
+.diagram image, img.fl-r { float: right; }
+.diagram p.fr { color: yellow; }
 .diagram, .break { clear: both; }
-
-
-
