--- a/_includes/pict-test.html
+++ b/_includes/pict-test.html
@@ -1,5 +1,5 @@
 <figure class="diagram">
 	<img class="{{ include.class }}" src="{{ include.src }}">
-	<p>{{ include.description }}</p>
+	<p class="{{ include.class }}">{{ include.description }}</p>
 	<p class="break"></p>
 </figure>
