--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,7 +32,7 @@ figcaption.f-perc5r { display: inline-block; margin-right:2em; width: 50%;}
 
 /* floating pictures */
 .diagram image, img.fl-l { float: left; }
-p.fl-l { margin-left:2em; color: green; }
+.diagram p.fl-l { margin-left:2em; color: yellow; }
 .diagram image, img.fl-r { float: right; }
 .diagram p.fl-r { margin-right:2em; }
 .diagram, .break { clear: both; }
