--- a/_includes/picts-float.html
+++ b/_includes/picts-float.html
@@ -1,5 +1,5 @@
 <figure class="diagram">
-	<img class="{{ include.class }}" src="{{ include.src }}" alt="{{ include.alt }}">
+	<img class="{{ include.class }}" src="{{ include.src }}" alt="{{ include.alt }} style="{{ include.style}} ">
 	<p class="{{ include.class }}">{{ include.description }}</p>
 	<p class="break"></p>
 </figure>
