--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -31,9 +31,12 @@ figcaption.f-perc5r { display: inline-block; margin-right:2em; width: 50%;}
 /*.txt-left { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; width: 50%; }*/
 
 /* floating pictures */
-p.fl-l { margin-left:2em; color: white; }
-p.fl-r { margin-right:2em; color: red; }
-/*.diagram image, img.fl-l { float: left; }   has fixed size !!!
+/* putting float here gives a fixed size to the picture !!! */
+p.fl-l { margin-left:2em; }
+p.fl-r { margin-right:2em; }
+.break { clear: both; }
+
+/*.diagram image, img.fl-l { float: left; }   
 .diagram p.fl-l { margin-left:2em; color: white; }
 .diagram image, img.fl-r { float: right; }
 .diagram p.fl-r { margin-right:2em; color: red; }
