--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,4 +19,25 @@
 /* copied from Jo Pol */
 #sidebar hr { height: 12px; border: 0; box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.2); }
 
+/* pictures */
+figure {display: block; margin:0;  }
+figcaption.f-perc5l { display: inline-block; margin-left:2em; width: 50%;}
+figcaption.f-perc7l { display: inline-block; margin-left:2em; width: 70%;}
+figcaption.f-perc5r { display: inline-block; margin-right:2em; width: 50%;}
+.diagram img, image.f-pict { display: inline-block; margin:0; width: 30%;}
+.diagram p.f-txt { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; width: 50%;}
+
+/*.fig-left { display: inline-block; margin-right:0; margin-top:0; margin-left:0; width: 30%; }*/
+/*.txt-left { display: inline-block; margin-right:0; margin-top:0; margin-left:2em; width: 50%; }*/
+
+/* floating pictures */
+/* putting float here gives a fixed size to the picture !!! */
+.break { clear: both; }
+
+/*.diagram image, img.fl-l { float: left; }   
+.diagram p.fl-l { margin-left:2em; color: white; }
+.diagram image, img.fl-r { float: right; }
+.diagram p.fl-r { margin-right:2em; color: red; }
+.diagram, .break { clear: both; }
+*/
 
