--- a/_includes/picts-centr.html
+++ b/_includes/picts-centr.html
@@ -1,5 +1,5 @@
 <figure>
   <p style="text-align: center;">
-  <img alt={{ include.alt }} src={{ include.src }}>
+  <img alt="{{ include.alt }}" src="{{ include.src }}">
   </p>
 </figure>
