--- a/_includes/formule.html
+++ b/_includes/formule.html
@@ -1,3 +1,3 @@
 <div style="background-color: White;">
-  <p style="margin-left:2em; font: courier;">{{include.formule}}</p>
+  <p style="margin-left:2em; font: 10px courier;">{{include.formule}}</p>
 </div>
