--- a/_includes/formule.html
+++ b/_includes/formule.html
@@ -1,4 +1,3 @@
-<div style="background-color: White; color: Black">
- &nbsp;
+<div style="background-color: White;">
   <p style="margin-left:2em; font: 12px courier;">{{include.formule}}</p>
 </div>
