--- a/_includes/formule.html
+++ b/_includes/formule.html
@@ -1,4 +1,5 @@
 <div style="background-color: White;">
   &nbsp;
   <p style="margin-left:2em; font: 12px courier;">{{include.formule}}</p>
+  &nbsp;
 </div>
