--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,12 @@
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}" media="screen" type="text/css">
     <link rel="stylesheet" href="{{ '/assets/css/print.css' | relative_url }}" media="print" type="text/css">
-
+    <script>
+        function sendme(tlDomain,account,provider) {
+            var x = account.split("").reverse().join("").replace(" ","&#46;")+"&#64;"+provider.split("").reverse().join("")+"&#46;"+tlDomain
+            document.write("<a href='&#109;&#97;ilto&#58;"+x+"&#63;&#115;ub&#106;ect&#61;GroundForge'>"+x+"</a>")
+        }
+    </script>
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -39,6 +44,7 @@
 
         <aside id="sidebar">
             {% include Sidebar.html %}
+            <script>sendme("com", "tsal tsrif","liamg")</script>
 
             {% if site.show_downloads %}
             <a href="{{ site.github.zip_url }}" class="button">
